--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <br>
 
                 <h2>分享給朋友</h2>
-                <details>特別適合剛分手嘅朋友，sharing is caring。</details>
+                <p>特別適合剛分手嘅朋友，sharing is caring。</p>
                 <!-- Sharingbutton WhatsApp -->
                 <a class="resp-sharing-button__link" href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E4%BA%A4%E6%98%93%E6%89%80%20%E8%99%95%E7%90%86%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E5%98%85%E5%B9%B3%E5%8F%B0%20-%20%E5%BE%9E%E6%AD%A4%E4%B8%8D%E5%86%8D%E7%82%BA%E5%89%8D%E5%BA%A6%E7%89%A9%E5%93%81%E7%85%A9%E6%83%B1%20https%3A%2F%2Fextochangehk.github.io%2F" target="_blank" rel="noopener" aria-label="">
                     <div class="resp-sharing-button resp-sharing-button--whatsapp resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
