still fixing reg style

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style> -->
             <section id="register">
-                <div>
+                <header>
                     <div id="mc_embed_signup_footer">
                         <h2>登記試用</h2>
                         <form
@@ -319,7 +319,7 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </header>
             </section>
 
             <!--End mc_embed_signup-->
