--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </style> -->
             <section id="register">
                 <header>
-                    <div id="mc_embed_signup_footer">
+                    <!-- <div id="mc_embed_signup_footer"> -->
                         <h2>登記試用</h2>
                         <form
                             action="https://gmail.us20.list-manage.com/subscribe/post?u=ec8a5a56df9490e1b38741d22&amp;id=e243549f96"
@@ -288,11 +288,11 @@
                                         id="mc-embedded-subscribe" class="registerButton center">
                             </div>
                         </form>
-                    </div>
+                    <!-- </div> -->
 
                     <br>
                     
-                    <div>
+                    <!-- <div> -->
                         <h2>分享給朋友</h2>
                         <p>特別適合剛分手嘅朋友，sharing is caring。</p>
                         <!-- Sharingbutton WhatsApp -->
@@ -318,7 +318,7 @@
                             </div>
                             </div>
                         </a>
-                    </div>
+                    <!-- </div> -->
                 </header>
             </section>
 
