smaller typed text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav>
             <img src="./static/extochangehk-icon72x72.png" alt="logo">
             <ul>
-                <li><h3><span id="typed"></span>&nbsp;&nbsp;Dump咗佢？&nbsp;&nbsp;唔好啦</h3></li>
+                <li><span id="typed"></span>&nbsp;&nbsp;Dump咗佢？&nbsp;&nbsp;唔好啦</li>
                 <!-- <li><a href="#mc_embed_signup_footer">立即登記</a></li> -->
                 <li><a href="#">☰</a>
                     <ul>
