--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- MVP.css quickstart template: https://github.com/andybrewer/mvp/ -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 
 <head>
     <link rel="icon" type="image/png" href="./static/extochangehk-icon36x36.png">
