add datalist examples

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <img src="./static/extochangehk-icon72x72.png" alt="logo">
             <ul>
                 <li><span id="typed"></span>&nbsp;&nbsp;Dump咗佢？&nbsp;&nbsp;唔好啦</li>
-                <!-- <li><a href="#mc_embed_signup_footer">立即登記</a></li> -->
                 <li><a href="#">☰</a>
                     <ul>
                         <li><a href="#products">產品和服務</a></li>
@@ -88,7 +87,7 @@
         </section>
         <!-- <br> -->
         <div>
-            <div id="typed-strings">
+            <datalist id="typed-strings">
                 <p>前男友送嘅刻字Ipad`📱`</p>
                 <p>前女友送嘅刻字Ipad`📱`</p>
                 <p>前男友送嘅刻字Iphone`📱`</p>
@@ -109,9 +108,19 @@
                 <p>前女友送嘅鞋`👟`</p>
                 <p>前男友送嘅襪`🧦`</p>
                 <p>前女友送嘅襪`🧦`</p>
-              </div>
-              <!-- <h1><span id="typed"></span></h1>
-              <h3>Dump咗佢？&nbsp;&nbsp;&nbsp;唔好啦</h3> -->
+                <p>前男友送嘅相機`📷`</p>
+                <p>前女友送嘅相機`📸`</p>
+                <p>前男友送嘅畫`🎨`</p>
+                <p>前女友送嘅畫`🏙`</p>
+                <p>前男友送嘅盆栽`🌳`</p>
+                <p>前女友送嘅仙人掌`🌵`</p>
+                <p>前男友送嘅羽毛球拍`🏸`</p>
+                <p>前女友送嘅球拍`🏓`</p>
+                <p>前男友送嘅玩具`🎯`</p>
+                <p>前女友送嘅PS5`🎮`</p>
+                <p>前男友送嘅公仔`🐷`</p>
+                <p>前女友送嘅公仔`🐸`</p>
+              </datalist>
             <script>
                 var typed = new Typed('#typed', {
                   stringsElement: '#typed-strings',
