--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
     <title>香港前度禮物交易所</title>
 </head>
 <body>
-    <!-- <marquee class="bottom">This text will scroll from right to left</marquee> -->
+    <div id="stock-marquee"><h4><span class="index up">刻字Ipad指數 ▲ +30</span><span class="index">   |   </span><span class="index up">銀包指數 ▲ +25</span><span class="index">   |   </span><span class="index down">盆栽指數 ▼ -25</span><span class="index">   |   </span><span class="index down">相機指數 ▼ -67</span><span class="index">   |   </span><span id="typed"></span>   <span>Dump咗佢？唔好啦</span> </h4></div>
     <header class="hero">
         <nav>
             <img src="./static/extochangehk-icon72x72.png" alt="logo">
             <ul>
-                <li><span id="typed"></span>&nbsp;&nbsp;Dump咗佢？&nbsp;&nbsp;唔好啦</li>
                 <li><a href="#">☰</a>
                     <ul>
                         <li><a href="#products">產品和服務</a></li>
@@ -69,7 +68,7 @@
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                        <input type="email" value="" name="EMAIL" class="email glowing-border" id="mce-EMAIL"
                             placeholder="e.g. iamgoodboyfriend@gmail.com" required>
                         <br>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -83,29 +82,27 @@
 
             <!--End mc_embed_signup-->
 
-           
         </section>
         <!-- <br> -->
         <div>
+            
             <datalist id="typed-strings">
                 <p>前男友送嘅刻字Ipad`📱`</p>
                 <p>前女友送嘅刻字Ipad`📱`</p>
-                <p>前男友送嘅刻字Iphone`📱`</p>
-                <p>前女友送嘅刻字Iphone`📱`</p>
                 <p>前男友送嘅銀包`👝`</p>
                 <p>前女友送嘅銀包`👝`</p>
                 <p>前男友送嘅手袋`👜`</p>
                 <p>前女友送嘅公事包`💼`</p>
-                <p>前男友送嘅情侶戒指`💍`</p>
-                <p>前女友送嘅情侶戒指`💍`</p>
-                <p>前男友送嘅情侶擺設`🗿`</p>
-                <p>前女友送嘅情侶擺設`⚱`</p>
+                <p>前男友送嘅戒指`💍`</p>
+                <p>前女友送嘅戒指`💍`</p>
+                <p>前男友送嘅擺設`🗿`</p>
+                <p>前女友送嘅擺設`⚱`</p>
                 <p>前男友送嘅衫`👚`</p>
                 <p>前女友送嘅衫`🧥`</p>
                 <p>前男友送嘅褲`👖`</p>
                 <p>前女友送嘅褲`👖`</p>
-                <p>前男友送嘅鞋`👠`</p>
-                <p>前女友送嘅鞋`👟`</p>
+                <p>前男友送嘅高踭鞋`👠`</p>
+                <p>前女友送嘅波鞋`👟`</p>
                 <p>前男友送嘅襪`🧦`</p>
                 <p>前女友送嘅襪`🧦`</p>
                 <p>前男友送嘅相機`📷`</p>
@@ -114,7 +111,7 @@
                 <p>前女友送嘅畫`🏙`</p>
                 <p>前男友送嘅盆栽`🌳`</p>
                 <p>前女友送嘅仙人掌`🌵`</p>
-                <p>前男友送嘅羽毛球拍`🏸`</p>
+                <p>前男友送嘅球拍`🏸`</p>
                 <p>前女友送嘅球拍`🏓`</p>
                 <p>前男友送嘅玩具`🎯`</p>
                 <p>前女友送嘅PS5`🎮`</p>
@@ -287,7 +284,7 @@
                             target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
                                 <p>有意試用禮物交易平台或了解本交易所最新消息</p>
-                                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                <input type="email" value="" name="EMAIL" class="email glowing-border" id="mce-EMAIL"
                                     placeholder="e.g. iamgoodboyfriend@gmail.com" required>
                                 <br>
                                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -355,6 +352,8 @@
                 </svg></a></div>
             </div>
         </p>
+        <br>
+        <br>
     </footer>
 </body>
 
