--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="交易平台, 前度, 禮物, 前男友, 前女友">
     <meta name=”robots” content="index, follow">
-    <meta charset="UTF-8">
+    <meta name="og:title" property="香港前度禮物交易所 - 處理前度禮物嘅平台">
     <title>香港前度禮物交易所</title>
 </head>
 <body>
@@ -141,14 +141,14 @@
                     <img class="crop center" alt="交易平台" src="./static/exchange-platform.png">
                 </figure>
                 <h2>前度禮物交易平台</h2>
-                <p>讓你將自己前度嘅禮物交換成<u>其他人前度嘅禮物</u>。</p>
+                <p>讓你將自己前度嘅禮物交換成<u>其他人前度嘅禮物</u>。不賤賣，不浪費。</p>
             </aside>
             <aside>
                 <figure>
                     <img class="crop center" alt="託管人服務" src="./static/custodian.png">
                 </figure>
                 <h2>[快將推出]前度物品託管人服務</h2>
-                <p>代你保管有紀念價值嘅前度物品（如信件）。</p>
+                <p>代你保管有紀念價值嘅前度物品（如信件）。唔駛再提心吊膽比現任發現一把火燒哂。</p>
             </aside>
         </section>
         
@@ -167,9 +167,9 @@
                 <h3>Option 1 - Dump咗佢</h3>
                 <figure>
                     <img class="crop" alt="Dump咗佢" src="./static/rubbin-bin.jpg">
-                    <figcaption><small><span>Photo by <a
+                    <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@jilburr?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jilbert
-                                    Ebrahimi</a> on <a
+                                    Ebrahimi</a> on <a rel="nofollow"
                                     href="https://unsplash.com/photos/-wR0XMaegRo?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small>
                     </figcaption>
                 </figure>
@@ -182,9 +182,9 @@
                 <h3>Option 2 - 收埋唔畀另一半見到</h3>
                 <figure>
                     <img class="crop" alt="收埋唔畀另一半見到" src="./static/hiding-safe2.jpg">
-                    <figcaption><small><span>Photo by <a
+                    <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@farber?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jonathan
-                                    Farber</a> on <a
+                                    Farber</a> on <a rel="nofollow"
                                     href="https://unsplash.com/s/photos/safe?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small>
                     </figcaption>
                 </figure>
@@ -197,9 +197,9 @@
                 <h3>Option 3 - 扮唔係前度送嘅禮物</h3>
                 <figure>
                     <img class="crop" alt="扮唔係前男女朋友送嘅禮物" src="./static/liar.jpg">
-                    <figcaption><small><span>Photo by <a
+                    <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@reskp?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jametlene
-                                    Reskp</a> on <a
+                                    Reskp</a> on <a rel="nofollow"
                                     href="https://unsplash.com/s/photos/lying?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small>
                     </figcaption>
                 </figure>
@@ -213,9 +213,9 @@
                 <h3>Option 4 - 賣咗佢</h3>
                 <figure>
                     <img class="crop" alt="賣咗佢" src="./static/sale-discount.jpg">
-                    <figcaption><small><span>Photo by <a
+                    <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@tamanna_rumee?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Tamanna
-                                    Rumee</a> on <a
+                                    Rumee</a> on <a rel="nofollow"
                                     href="https://unsplash.com/s/photos/discount?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small>
                     </figcaption>
                 </figure>
