--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <h2>分享給朋友</h2>
                         <p>特別適合剛分手嘅朋友，sharing is caring。</p>
                         <!-- Sharingbutton WhatsApp -->
-                        <a class="resp-sharing-button__link" href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E4%BA%A4%E6%98%93%E6%89%80%20%E8%99%95%E7%90%86%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E5%98%85%E5%B9%B3%E5%8F%B0%20-%20%E5%BE%9E%E6%AD%A4%E4%B8%8D%E5%86%8D%E7%82%BA%E5%89%8D%E5%BA%A6%E7%89%A9%E5%93%81%E7%85%A9%E6%83%B1%20https%3A%2F%2Fextochangehk.github.io%2F" target="_blank" rel="noopener" aria-label="">
+                        <a class="resp-sharing-button__link" href="whatsapp://send?text=%E9%A6%99%E6%B8%AF%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E4%BA%A4%E6%98%93%E6%89%80%20%E8%99%95%E7%90%86%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E5%98%85%E5%B9%B3%E5%8F%B0%20-%20%E5%BE%9E%E6%AD%A4%E4%B8%8D%E5%86%8D%E7%82%BA%E5%89%8D%E5%BA%A6%E7%89%A9%E5%93%81%E7%85%A9%E6%83%B1%20https%3A%2F%2Fextochange.com%2F" target="_blank" rel="noopener" aria-label="">
                             <div class="resp-sharing-button resp-sharing-button--whatsapp resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
                             <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"><path d="m12 0c-6.6 0-12 5.4-12 12s5.4 12 12 12 12-5.4 12-12-5.4-12-12-12zm0 3.8c2.2 0 4.2 0.9 5.7 2.4 1.6 1.5 2.4 3.6 2.5 5.7 0 4.5-3.6 8.1-8.1 8.1-1.4 0-2.7-0.4-3.9-1l-4.4 1.1 1.2-4.2c-0.8-1.2-1.1-2.6-1.1-4 0-4.5 3.6-8.1 8.1-8.1zm0.1 1.5c-3.7 0-6.7 3-6.7 6.7 0 1.3 0.3 2.5 1 3.6l0.1 0.3-0.7 2.4 2.5-0.7 0.3 0.099c1 0.7 2.2 1 3.4 1 3.7 0 6.8-3 6.9-6.6 0-1.8-0.7-3.5-2-4.8s-3-2-4.8-2zm-3 2.9h0.4c0.2 0 0.4-0.099 0.5 0.3s0.5 1.5 0.6 1.7 0.1 0.2 0 0.3-0.1 0.2-0.2 0.3l-0.3 0.3c-0.1 0.1-0.2 0.2-0.1 0.4 0.2 0.2 0.6 0.9 1.2 1.4 0.7 0.7 1.4 0.9 1.6 1 0.2 0 0.3 0.001 0.4-0.099s0.5-0.6 0.6-0.8c0.2-0.2 0.3-0.2 0.5-0.1l1.4 0.7c0.2 0.1 0.3 0.2 0.5 0.3 0 0.1 0.1 0.5-0.099 1s-1 0.9-1.4 1c-0.3 0-0.8 0.001-1.3-0.099-0.3-0.1-0.7-0.2-1.2-0.4-2.1-0.9-3.4-3-3.5-3.1s-0.8-1.1-0.8-2.1c0-1 0.5-1.5 0.7-1.7s0.4-0.3 0.5-0.3z"/></svg>
                             </div>
@@ -310,7 +310,7 @@
                         </a>
         
                         <!-- Sharingbutton Facebook -->
-                        <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fextochangehk.github.io%2F" target="_blank" rel="noopener" aria-label="">
+                        <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fextochange.com%2F" target="_blank" rel="noopener" aria-label="">
                             <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm3.6 11.5h-2.1v7h-3v-7h-2v-2h2V8.34c0-1.1.35-2.82 2.65-2.82h2.35v2.3h-1.4c-.25 0-.6.13-.6.66V9.5h2.34l-.24 2z"/></svg>
                             </div>
@@ -318,7 +318,7 @@
                         </a>
                         
                         <!-- Sharingbutton Twitter -->
-                        <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text=%E9%A6%99%E6%B8%AF%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E4%BA%A4%E6%98%93%E6%89%80%20%E8%99%95%E7%90%86%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E5%98%85%E5%B9%B3%E5%8F%B0%20-%20%E5%BE%9E%E6%AD%A4%E4%B8%8D%E5%86%8D%E7%82%BA%E5%89%8D%E5%BA%A6%E7%89%A9%E5%93%81%E7%85%A9%E6%83%B1&amp;url=https%3A%2F%2Fextochangehk.github.io%2F" target="_blank" rel="noopener" aria-label="">
+                        <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text=%E9%A6%99%E6%B8%AF%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E4%BA%A4%E6%98%93%E6%89%80%20%E8%99%95%E7%90%86%E5%89%8D%E5%BA%A6%E7%A6%AE%E7%89%A9%E5%98%85%E5%B9%B3%E5%8F%B0%20-%20%E5%BE%9E%E6%AD%A4%E4%B8%8D%E5%86%8D%E7%82%BA%E5%89%8D%E5%BA%A6%E7%89%A9%E5%93%81%E7%85%A9%E6%83%B1&amp;url=https%3A%2F%2Fextochange.com%2F" target="_blank" rel="noopener" aria-label="">
                             <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"/></svg>
                             </div>
