remove google font and make js async

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 <head>
     <link rel="icon" type="image/png" href="./static/extochangehk-icon36x36.png">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Roboto|Open Sans">
+    <!-- <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto|Open Sans"> -->
     <link rel="stylesheet" href="./mvp.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCKX32HV1P"></script>
     <script>
