--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
             </header>
             <aside>
                 <figure>
-                    <img class="crop center" alt="交易平台" src="./static/exchange-platform.png">
+                    <img class="crop center" alt="交易平台" src="./static/exchange-platform.webp">
                 </figure>
                 <h2>前度禮物交易平台</h2>
                 <p>讓你將自己前度嘅禮物交換成<u>其他人前度嘅禮物</u>。不賤賣，不浪費。</p>
             </aside>
             <aside>
                 <figure>
-                    <img class="crop center" alt="託管人服務" src="./static/custodian.png">
+                    <img class="crop center" alt="託管人服務" src="./static/custodian.webp">
                 </figure>
                 <h2>[快將推出]前度物品託管人服務</h2>
                 <p>代你保管有紀念價值嘅前度物品（如信件）。唔駛再提心吊膽比現任發現一把火燒哂。</p>
@@ -166,7 +166,7 @@
             <aside>
                 <h3>Option 1 - Dump咗佢</h3>
                 <figure>
-                    <img class="crop" alt="Dump咗佢" src="./static/rubbin-bin.jpg">
+                    <img class="crop" alt="Dump咗佢" src="./static/rubbin-bin.webp">
                     <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@jilburr?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jilbert
                                     Ebrahimi</a> on <a rel="nofollow"
@@ -181,7 +181,7 @@
             <aside>
                 <h3>Option 2 - 收埋唔畀另一半見到</h3>
                 <figure>
-                    <img class="crop" alt="收埋唔畀另一半見到" src="./static/hiding-safe2.jpg">
+                    <img class="crop" alt="收埋唔畀另一半見到" src="./static/hiding-safe2.webp">
                     <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@farber?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jonathan
                                     Farber</a> on <a rel="nofollow"
@@ -196,7 +196,7 @@
             <aside>
                 <h3>Option 3 - 扮唔係前度送嘅禮物</h3>
                 <figure>
-                    <img class="crop" alt="扮唔係前男女朋友送嘅禮物" src="./static/liar.jpg">
+                    <img class="crop" alt="扮唔係前男女朋友送嘅禮物" src="./static/liar.webp">
                     <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@reskp?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jametlene
                                     Reskp</a> on <a rel="nofollow"
@@ -212,7 +212,7 @@
             <aside>
                 <h3>Option 4 - 賣咗佢</h3>
                 <figure>
-                    <img class="crop" alt="賣咗佢" src="./static/sale-discount.jpg">
+                    <img class="crop" alt="賣咗佢" src="./static/sale-discount.webp">
                     <figcaption><small><span>Photo by <a rel="nofollow"
                                     href="https://unsplash.com/@tamanna_rumee?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Tamanna
                                     Rumee</a> on <a rel="nofollow"
